--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   mobx: ^2.1.4
   flutter_mobx: ^2.0.6+5
   get_it: ^7.2.0
+  brasil_fields: ^1.10.0
 
 dev_dependencies:
   flutter_test:
